<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    >

    <Button
        android:text="@string/button_new_user"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button_new_device"
        android:layout_below="@id/button_new_user"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_new_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button_new_sensor"
        android:layout_below="@id/button_new_device"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_new_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button_save"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_save"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/button_off"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>