<resources>
    <string name="app_name">AGMS</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_connect">Connect</string>
    <string name="title_diary">Diary</string>
    <string name="title_event">Event</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_calibration">Calibration</string>
    <string name="title_range">Range</string>
    <string name="title_setting">Setting</string>
    <string name="title_chart">Chart</string>

    <string name="calibration_desc">After 30 minutes of the first calibration,\ndo the second calibration.</string>

    <string name="connect_title">Serial</string>
    <string name="calibration_1_title">Calibration 1</string>
    <string name="calibration_2_title">Calibration 2</string>

    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="scan_in_background">Scan in background</string>
    <string name="mac_address">MAC: %s</string>
    <string name="connection_state">State: %s</string>
    <string name="read_rssi">RSSI: %d</string>
    <string name="prefix_hex">0x</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="idle_check">안정화 체크</string>
    <string name="connecting">Connecting</string>

    <string name="range_title">Alert range set up</string>
    <string name="low">Low</string>
    <string name="high">High</string>

    <string name="urgent_low">Urgent Low</string>
    <string name="urgent_high">Urgent High</string>

    <string name="urgent_high_value">220</string>
    <string name="urgent_low_value">40</string>

    <string name="glucose_unit">mg/dl</string>
    <string name="done">Done</string>


    <string name="title_warm_up">Warm-up</string>
    <string name="button_warm_up">Warm-up</string>
    <string name="button_skip_warm_up">Skip</string>
    <!-- Ble scan error messages -->
    <string name="error_bluetooth_not_available">Bluetooth is not available</string>
    <string name="error_bluetooth_disabled">Enable bluetooth and try again</string>
    <string name="error_location_permission_missing">On Android 6.0 location permission is required. Please enable it in phone settings</string>
    <string name="error_location_services_disabled">Location services need to be enabled on Android 6.0</string>
    <string name="error_scan_failed_already_started">Scan with the same filters is already started</string>
    <string name="error_scan_failed_application_registration_failed">Failed to register application for bluetooth scan</string>
    <string name="error_scan_failed_feature_unsupported">Scan with specified parameters is not supported</string>
    <string name="error_scan_failed_internal_error">Scan failed due to internal error</string>
    <string name="error_scan_failed_out_of_hardware_resources">Scan cannot start due to limited hardware resources</string>
    <string name="error_undocumented_scan_throttle">Android 7+ does not allow more scans.</string>
    <string name="error_undocumented_scan_throttle_retry">Try in %d seconds</string>
    <string name="error_bluetooth_cannot_start">Unable to start scanning</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_username_or_password">Not a valid username or password</string>
    <string name="permission_error_message">기기 연결을 위하여 블루투스 관련 권한을 허용해주셔야 합니다.</string>
    <string name="bluetooth_on_error_message">기기 연결을 위하여 블루투스를 켜주세요.</string>
    <string name="write_permission_error_message">csv 파일 저장을 위해서 쓰기 권한을 허용해주세요.</string>
    <string name="alert_title">알림</string>
    <string name="start_activity">앱 열기</string>
    <string name="stop_bluetooth_connect">디바이스 연결 끊기</string>
    <string name="bluetooth_init_error">블루투스를 초기화할 수 없습니다.</string>
    <string name="toast_device_already_connected">이미 디바이스가 연결되어있습니다.</string>
    <string name="toast_device_connected">디바이스가 연결되어있습니다.</string>
    <string name="toast_device_scan_now">디바이스를 찾고 있습니다.</string>
    <string name="toast_device_start_connect">디바이스를 연결합니다.</string>
    <string name="file_save_now">파일 저장중입니다.</string>
    <string name="alert_message_device_connect_error">기기와 스마트폰이 연결되지 않았습니다.</string>

    <string name="button_new_patient">new patient</string>
    <string name="button_new_user">New user</string>
    <string name="button_new_device">New device</string>
    <string name="button_new_sensor">New sensor</string>
    <string name="confirm">확인</string>
    <string name="text_event_time">시간: %s</string>
    <string name="text_event_content">이벤트: %s</string>
    <string name="text_event_glucose">혈당 : %s</string>
    <string name="text_confirm_event">해당 이벤트를 기록 하시겠습니까?</string>



    <string name="text_patient_name">환자 이름: %s</string>
    <string name="text_patient_number">환자 번호: %s</string>
    <string name="dialog_create_patient_confirm">해당 환자를 등록 하시겠습니까?</string>
    <string name="dialog_app_off_confirm">APP을 종료를 하시면 디바이스 연결이 끊어지고  환자의 측정도 종료가 됩니다.\n계속 하시겠습니까?</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_off">App Off</string>

    <string name="text_device_disconnected">블루투스 연결이 끊어졌습니다.\n블루투스 상태및 디바이스를 확인해주세요.</string>

    <string name="title_dialog">알림</string>
    <string name="title_dialog_in_progress">측정 진행중</string>
    <string name="dialog_">측정 진행중</string>
    <string name="dialog_message_new_device">새로운 디바이스를 연결하려면기존의 연결이 끊어지고 측정도 종료가 됩니다. 계속 하시겠습니까?</string>
    <string name="dialog_message_new_user">새로운 사용자로 변경하면 현재 측정이 종료됩니다. 계속 하시겠습니까?</string>
    <string name="range_desc">Alert range set up</string>
    <string name="greet_morning">Good morning</string>
    <string name="greet_lunch">Enjoy your lunch</string>
    <string name="greet_afternoon">Good afternoon</string>
    <string name="greet_evening">Good evening</string>
    <string name="greet_night">Good night</string>
    <string name="normal_range">Normal Range</string>
    <string name="low_range">Low Range</string>
    <string name="high_range">High Range</string>
    <string name="enter_the_valid_calibration">유효한 혈당값을 입력해주세요.</string>
    <string name="dialog_message_calibration">혈당 BG(1회용 혈당 측정값)값은 공복 혈당 및 식후 2시간후에 측정한 값을 사용해주세요.</string>
    <string name="dialog_message_go_setting_to_change_admin_password">관리자 비밀번호 설정 후 3달이 지났습니다. 설정화면으로 이동해 비밀번호를 교체하시겠습니까?</string>
    <string name="dialog_message_go_setting_to_change_sensor">센서 교체시기가 지났습니다. 설정화면으로 이동해 센서를 교체하시겠습니까?</string>
    <string name="dialog_message_retry_warmup">다시 안정화를 하시겠습니까?</string>
    <string name="dialog_button_stable">안정화</string>
    <string name="dialog_button_change_sensor">센서 교체</string>
    <string name="day_average">Day Average</string>
    <string name="week_average">Week Average</string>
    <string name="month_average">Month Average</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="none_value">\?</string>
    <string name="zero_value">0</string>

    <string name="message_login">Welcome to,\nAgms</string>
    <string name="message_user_name">User Name</string>
    <string name="message_connect">Enter the device’s number and\nconnect or warm up.</string>

    <string name="create_patient">Create patient</string>

    <string name="message_patient_name">Patient name</string>
    <string name="message_patient_number">Patient number </string>

    <string name="action_create">Create</string>
    <string name="action_next">다음</string>

    <string name="error_empty_patient_number">환자 번호를 입력해주세요.</string>
    <string name="error_empty_patient_name">환자 이름을 입력해주세요.</string>
    <string name="error_not_number_error_patient_number">환자 번호를 숫자로만 입력해주세요.</string>
    <string name="file_save_at_index">번 데이터를 저장합니다.</string>
    <string name="error_duplicate_patient_number">사용중인 환자 번호 입니다. 다른 번호를 입력해주세요.</string>
    <string name="event_desc">혈당의 변화가 일어날 수 있는 활동을 하셨으면 시간을 선택 후 Event 칸에 20자 이내로 간단하게 적어주시고 등록 버튼을 눌러주세요.</string>

    <string name="label_time">시간</string>
    <string name="label_event">이벤트</string>
    <string name="label_glucose">혈당</string>
    <string name="hint_time">00:00:00</string>
    <string name="error_invalid_time">시간을 정확히 입력해주세요.</string>
    <string name="dialog_no_future">시간을 미래로 설정할 수 없습니다.</string>
    <string name="error_empty_event">이벤트 또는 혈당을 입력해주세요.</string>
    <string name="dialog_confirm_event">이벤트를 기록하시겠습니까?</string>
    <string name="toast_save_event">이벤트를 기록하였습니다.</string>

    <string name="title_admin_register">Admin Register</string>
    <string name="label_admin_register">Please register your administrator\naccount information.</string>
    <string name="label_admin_id">Admin ID</string>
    <string name="label_password">Password</string>
    <string name="label_password_check">Password Check</string>
    <string name="label_password_hint">Password Hint</string>
    <string name="error_empty_admin_id">관리자 ID를 입력해주세요.</string>
    <string name="error_empty_admin_password">비밀번호를 입력해주세요.</string>
    <string name="error_empty_admin_password_check">비밀번호 확인을 입력해주세요.</string>
    <string name="error_empty_admin_password_hint">비밀번호 힌트를 입력해주세요.</string>
    <string name="error_empty_admin_password_not_equal">비밀번호와 비밀번호 확인이 동일하지 않습니다.</string>
    <string name="error_empty_admin_password_length">비밀번호를 %1$d자리 이상 입력해주세요.</string>

    <string name="error_duplicate_admin_id">중복된 ID가 있습니다.</string>
    <string name="error_password_hint_not_equal">패스워드 힌트를 확인해주세요.</string>
    <string name="error_check_parameter">입력값을 확인해주세요.</string>
    <string name="error_passowrd_not_equal">비밀번호를 확인해주세요.</string>
    <string name="error_no_admin_data">id를 확인해주세요.</string>
    <string name="error_no_admin_data_create">관리자 정보가 없습니다. 생성화면으로 이동합니다.</string>
    <string name="message_pasword_chagned">비밀번호가 변경되었습니다.</string>

    <string name="button_continue">Continue</string>

    <string name="admin_login_desc">Please enter your ID and password.</string>
    <string name="admin_login_title">Login</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="password_change_title">Password Change</string>
    <string name="password_change_desc">Please check the password hint and enter a new password.</string>
    <string name="new_password">New Password</string>
    <string name="message_id_empty">관리자 ID가 없습니다. 이전 화면에서 정확한 ID를 입력해주세요.</string>

    <string name="setting_data_admin_id">AdminId: %s</string>
    <string name="setting_data_device">Device: %s</string>
    <string name="setting_data_device_battery">Device Battery Level: %s</string>
    <string name="setting_data_sensor_date">Sensor: %s</string>
    <string name="notification_calibration">혈당을 측정하여 보정을 해주세요</string>
    <string name="notification_calibration_at">에 혈당을 측정하여 보정을 완료해주세요.</string>
    <string name="calibration_date_format">a h시 mm분</string>
    <string name="notification_text_device">디바이스 </string>
    <string name="notification_text_connected"> 연결됨</string>
    <string name="notification_text_connecting"> 연결중</string>
    <string name="notification_text_disconnected"> 연결 안됨</string>
    <string name="notification_text_glucose"> 혈당:</string>
    <string name="notification_text_device_connect_plz">디바이스를 연결해주세요.</string>
    <string name="notification_text_warmup_plz">Warm-up을 진행해주세요.</string>
    <string name="notification_text_battery_cahnge">배터리를 교체해주세요.</string>
    <string name="notification_text_change_admin_password">관리자 비밀번호를 교체해주세요.</string>
    <string name="notification_text_change_sensor">센서를 교체해주세요.</string>
    <string name="file_save_start">파일을 저장합니다.</string>
    <string name="file_save_error_directory_not_exist">파일 저장 위치를 지정할 수 없습니다.</string>
    <string name="file_save_glucorse_complete">혈당 정보를 저장하였습니다.</string>
    <string name="file_error_glucorse_not_found">파일을 생성할 수 없습니다.</string>
    <string name="file_error_glucorse_io">파일 쓰기 중 오류가 발생했습니다.</string>
    <string name="file_save_event_complete">이벤트 정보를 저장하였습니다.</string>
    <string name="file_error_event_not_found">파일을 생성할 수 없습니다.</string>
    <string name="file_error_event_io">파일 쓰기 중 오류가 발생했습니다.</string>
    <string name="file_save_over">파일 저장을 완료하였습니다.</string>
    <string name="progress_dialog_message">데이터를 저장중입니다.</string>

    <string-array name="password_hint_array">
        <item>1. What is your elementary school name?</item>
        <item>2. What is your family name?</item>
        <item>3. What is your most favorite movie?</item>
    </string-array>

<!--    <string name="enter_valid_password">대문자,소문자,숫자,특수문자를 모두 포함하는 8자 이상의 비밀번호를 입력해주세요.</string>-->

    <string name="contains_empty_character">공백은 포함해서는 안됩니다.</string>
    <string name="enter_valid_password">공백을 제외한 영문자,숫자,특수문자(!*~@#$%^+=?)를 모두 포함하는 8자 이상의 비밀번호를 입력해주세요.</string>
    <string name="enter_valid_password_upper_case">대문자가 포함되어야 합니다.</string>
    <string name="enter_valid_password_lower_case">소문자가 포함되어야 합니다.</string>
    <string name="enter_valid_password_alphabet">영문자가 포함되어야 합니다.</string>
    <string name="enter_valid_password_number">숫자가 포함되어야 합니다.</string>
    <string name="enter_valid_password_special_character">특수문자(!*~@#$%^+=?)가 포함되어야 합니다.</string>
    <string name="enter_valid_password_minimum_length">최소8자 이상 입력해주세요.</string>
    <string name="dialog_message_empty_installer">개발 툴로 설치되었습니다.</string>
    <string name="dialog_message_dev_invalid_installer">구글 플레이를 통해 설치되지 않았습니다. 테스트 버전이라 실행되며, 배포버전에서는 실행되지 않아야 합니다.</string>
    <string name="dialog_message_invalid_installer">구글 플레이를 통해 설치되지 않았습니다. 정상적으로 설치 부탁드립니다.</string>
    contains_empty_character
</resources>